# intel80tools

./: .gitattributes  .gitignore  MOVED.md  OMF.docx  Package  README.md  _version.h  diffbin.cpp  errtest.pl  fmt.com  funcmap  isis.ext  mkdepend.pl  pack.pl  plmfunc.xls  pretty.pl  readme.txt  rebase.pl  relst.pl  unpack.pl  version.in
Doc/: CPMSrc.html  CPMSrc.md  Changelog.md  Cports.html  Cports.md  Install and Use Pandoc.docx  IntelSrc.html  IntelSrc.md  IntelTools.html  IntelTools.md  Misc.html  Misc.md  Overview.html  Overview.md  Revisions  Tools.html  Tools.md  makefile.html  makefile.md  msdos.html  msdos.md  omf.xlsx  plm81-82 port notes.md  revisions  thames.html  thames.md
asm80-c/: asm1m.c  asm2m.c  asm3m.c  asm4m.c  asm5m.c  asm6m.c  asm80.h  asm80.sln  asm80.vcxproj  asm80.vcxproj.filters  asm8m.c  cntrlm.c  cvt.pl  data.h  debug.c  emitm.c  globlm.c  initm.c  io.c  keym.c  listm.c  literals.h  macro.asm  pcktok.c  plm80types.h  procs.h  rdsrc.c  simple.asm  startm.c
c-ports/: c-ports.sln
cpmsrc/: makefile
ctools/: mac.com  sid.com
itools/: genpex  notes.txt
lib80-c/: error.h  io.c  isis1.c  isis1.h  isis2.c  isis2.h  lib.c  lib.h  lib1.c  lib1.h  lib3.c  lib4.c  lib80-c.sln  lib80-c.vcxproj  lib80-c.vcxproj.filters
link80-c/: link3.c  link80-c.sln  link80-c.vcxproj.filters  linkov.c  mkfnam.c  pstafn.c  pstfn.c  skpspc.c
locate80-c/: io.c  loc.h  loc1.c  loc2a.c  loc2b.c  loc3.c  loc4.c  loc4a.c  loc6.c  loc7.c  (+4 more)
thamesSrc/: ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.in  thames.html  thames.md  thames.txt
(+2159 files in other folders)
