dnl Process this file with autoconf to produce a configure script.
AC_INIT(bin/thames.c)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR([m4])
VERSION=0.1.3
UPDATED='July 26, 2017'
AM_INIT_AUTOMAKE(thames, $VERSION)
AM_CONFIG_HEADER(config.h)
LT_INIT

dnl Get an absolute version of $srcdir and .

LSUBDIRS=""
DSTROOT=`pwd`
if test x"$srcdir" = x
then
	SRCROOT=`pwd`
else
	cd $srcdir
	SRCROOT=`pwd`
	cd $DSTROOT
fi


dnl Checks for programs.
AC_PROG_CC

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h sys/param.h sys/types.h sys/stat.h errno.h)
AC_CHECK_HEADERS(limits.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_OFF_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strstr)

AC_OUTPUT(Makefile bin/Makefile)

